--- a/package.json
+++ b/package.json
@@ -10,40 +10,22 @@
     "npm": ">=8.5.0"
   },
   "scripts": {
-    "angular-version": "ng --version",
     "build": "ng build",
     "build:prod": "ng build --configuration production",
     "lint": "ng lint",
     "lint-staged": "lint-staged",
-    "ng": "ng",
-    "patch-package": "patch-package",
-    "postinstall": "is-ci || husky install && patch-package",
+    "npm-build-package": "ng-packagr -p ng-package.json",
+    "postinstall": "is-ci || husky install",
+    "prepare": "husky install",
     "prettier": "prettier --write .",
     "prettier:check": "prettier --check .",
     "start": "ng serve --open",
-    "start:hmr": "ng serve --open --hmr",
-    "start:prod": "ng serve --configuration production --open",
-    "test": "ng test",
-    "test:silent": "ng test --watch=false",
-    "update:angular:run": "ng update",
-    "update:packages:check": "ncu",
-    "update:packages:run": "ncu -u",
-    "watch": "ng build --watch --configuration development",
-    "prepare": "husky install"
+    "start:prod": "ng serve --configuration production --open"
   },
-  "dependencies": {
-    "@angular/animations": "^14.1.0",
-    "@angular/common": "^14.1.0",
-    "@angular/compiler": "^14.1.0",
-    "@angular/core": "^14.1.0",
-    "@angular/forms": "^14.1.0",
-    "@angular/material": "^14.1.0",
-    "@angular/platform-browser": "^14.1.0",
-    "@angular/platform-browser-dynamic": "^14.1.0",
-    "@angular/router": "^14.1.0",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+  "peerDependencies": {
+    "@angular/animations": ">=12 <15",
+    "@angular/common": ">=12 <15",
+    "@angular/core": ">=12 <15"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.1.0",
@@ -53,7 +35,12 @@
     "@angular-eslint/schematics": "14.0.1",
     "@angular-eslint/template-parser": "14.0.1",
     "@angular/cli": "~14.1.0",
+    "@angular/compiler": "^14.1.0",
     "@angular/compiler-cli": "^14.1.0",
+    "@angular/forms": "^14.1.0",
+    "@angular/platform-browser": "^14.1.0",
+    "@angular/platform-browser-dynamic": "^14.1.0",
+    "@angular/router": "^14.1.0",
     "@types/jasmine": "~4.0.0",
     "@typescript-eslint/eslint-plugin": "5.29.0",
     "@typescript-eslint/parser": "5.29.0",
@@ -73,9 +60,12 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "patch-package": "^6.4.7",
+    "ng-packagr": "^14.1.0",
     "prettier": "^2.7.1",
-    "typescript": "~4.7.2"
+    "rxjs": "~7.5.0",
+    "tslib": "^2.3.0",
+    "typescript": "~4.7.2",
+    "zone.js": "~0.11.4"
   },
   "contributors": [{
     "name": "Cody Tolene",
@@ -88,12 +78,16 @@
     "url": "git+https://github.com/ProAngular/ngx-scroll-top.git"
   },
   "keywords": [
-    "Pro",
-    "Angular",
-    "Scroll",
-    "Top",
+    "pro",
+    "angular",
+    "scroll",
+    "top",
     "ngx-scroll-top",
-    "scroll-top"
+    "scroll-top",
+    "scroll to top",
+    "ngx",
+    "animate",
+    "button"
   ],
   "bugs": {
     "url": "https://github.com/ProAngular/ngx-scroll-top/issues"
