--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@proangular/ngx-scroll-top",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Configurable, lightweight back to top button for Angular projects.",
   "author": "Pro Angular <webmaster@proangular.com>",
   "homepage": "https://www.proangular.com",
@@ -41,6 +41,7 @@
     "@angular/forms": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@types/fs-extra": "^9.0.13",
     "@types/jasmine": "~4.0.0",
     "@typescript-eslint/eslint-plugin": "5.29.0",
     "@typescript-eslint/parser": "5.29.0",
@@ -52,6 +53,7 @@
     "eslint-plugin-rxjs": "^5.0.2",
     "eslint-plugin-rxjs-angular": "^2.0.0",
     "eslint-plugin-unicorn": "^43.0.1",
+    "fs-extra": "^10.1.0",
     "husky": "^8.0.1",
     "is-ci": "^3.0.1",
     "jasmine-core": "~4.2.0",
