--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "baseUrl": "./",
+    "baseUrl": ".",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
@@ -16,12 +16,13 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2020",
+    "target": "es2021",
     "module": "es2020",
     "lib": [
-      "es2020",
+      "es2021",
       "dom"
-    ]
+    ],
+    "newLine": "lf",
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
