--- a/.github/workflows/on-merge-main.yml
+++ b/.github/workflows/on-merge-main.yml
@@ -7,12 +7,10 @@ jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v3
-        run: npm ci
-
+      - uses: actions/checkout@v3
       - name: Verify Code 👌
         run: |
+          run: npm ci
           npm run lint
           npm run prettier:check
 
