--- a/.github/workflows/on-merge-main.yml
+++ b/.github/workflows/on-merge-main.yml
@@ -1,16 +1,18 @@
-name: Validate and Deploy
-"on":
+name: "Validate and Deploy"
+on:
   push:
     branches:
       - main
 jobs:
-  build_and_deploy:
+  "Validate and Deploy":
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Checkout 🛎️
+        run: npm ci
+
       - name: Verify Code 👌
         run: |
-          run: npm ci
           npm run lint
           npm run prettier:check
 
@@ -20,8 +22,8 @@ jobs:
           npm run npm-build-package
 
       # https://docs.npmjs.com/about-packages-and-modules
+      - uses: actions/setup-node@v3
       - name: Deploy Package to `npmjs` 🚀
-        uses: actions/setup-node@v3
         with:
           registry-url: "https://registry.npmjs.org"
         run: npm publish --access public --folder dist/npm
@@ -30,8 +32,8 @@ jobs:
 
       # https://docs.github.com/en/packages
       # https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
+      - uses: actions/setup-node@v3
       - name: Deploy Package to `gpr` 🚀
-        uses: actions/setup-node@v3
         with:
           registry-url: "https://npm.pkg.github.com"
         run: npm publish --access public --folder dist/npm
