--- a/.github/workflows/verify-pull-request.yml
+++ b/.github/workflows/verify-pull-request.yml
@@ -1,13 +1,15 @@
-name: Verify Pull Request
-"on": pull_request
+name: "Verify Pull Request"
+on: pull_request
 jobs:
-  build:
+  "Verify Pull Request":
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Checkout 🛎️
+        run: npm ci
+
       - name: Verify Code 👌
         run: |
-          run: npm ci
           npm run lint
           npm run prettier:check
 
