--- a/.github/workflows/verify-pull-request.yml
+++ b/.github/workflows/verify-pull-request.yml
@@ -1,7 +1,7 @@
 name: "Verify Pull Request"
 on: pull_request
 jobs:
-  "Verify Pull Request":
+  verify_pull_request:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
