--- a/.github/workflows/on-merge-main.yml
+++ b/.github/workflows/on-merge-main.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Deploy Package to `npmjs` 🚀
         with:
           registry-url: "https://registry.npmjs.org"
-        run: npm publish --access public --folder dist/npm
+      - run: npm publish --access public --folder dist/npm
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
 
@@ -36,6 +36,6 @@ jobs:
       - name: Deploy Package to `gpr` 🚀
         with:
           registry-url: "https://npm.pkg.github.com"
-        run: npm publish --access public --folder dist/npm
+      - run: npm publish --access public --folder dist/npm
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
