--- a/.github/workflows/on-merge-main-deploy-gpr.yml
+++ b/.github/workflows/on-merge-main-deploy-gpr.yml
@@ -11,10 +11,9 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       packages: write
     steps:
-      - name: Deploy 🚀
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
