--- a/.github/workflows/on-merge-main-deploy-gpr.yml
+++ b/.github/workflows/on-merge-main-deploy-gpr.yml
@@ -15,10 +15,15 @@ jobs:
       packages: write
     steps:
       - uses: actions/checkout@v3
+        with:
+          persist-credentials: false
       - uses: actions/setup-node@v3
         with:
           node-version: "16.x"
           registry-url: "https://npm.pkg.github.com"
+      - run: >
+          git config --global url."https://github.com/".insteadOf
+          ssh://git@github.com/
       - run: npm ci
       - run: npm run npm-build-package
       - run: npm publish --access public --folder dist/npm
