--- a/.github/workflows/on-merge-main-deploy-npmjs.yml
+++ b/.github/workflows/on-merge-main-deploy-npmjs.yml
@@ -9,9 +9,6 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      packages: write
     steps:
       - uses: actions/checkout@v3
         with:
@@ -21,8 +18,8 @@ jobs:
           node-version: "16.x"
           registry-url: "https://registry.npmjs.org"
       - run: >
-          git config --global url."https://github.com/".insteadOf
-          ssh://git@github.com/
+          git config --global url."https://${{ secrets.GITHUB_TOKEN
+          }}@github.com/".insteadOf  ssh://git@github.com/
       - run: npm ci
       - run: npm run npm-build-package
       - run: npm publish --access public --folder dist/npm
