--- a/.github/workflows/on-merge-main-deploy-npmjs.yml
+++ b/.github/workflows/on-merge-main-deploy-npmjs.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           node-version: "16.x"
           registry-url: "https://registry.npmjs.org"
+      - name: Deploy 🚀
       - run: >
           git config --global url."https://${{ secrets.GITHUB_TOKEN
           }}@github.com/".insteadOf  ssh://git@github.com/
