--- a/.github/workflows/on-merge-main-deploy-npmjs.yml
+++ b/.github/workflows/on-merge-main-deploy-npmjs.yml
@@ -11,17 +11,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-        with:
-          persist-credentials: false
       - uses: actions/setup-node@v3
         with:
-          node-version: "16.x"
           registry-url: "https://registry.npmjs.org"
-      - run: >
-          git config --global url."https://${{ secrets.GITHUB_TOKEN
-          }}@github.com/".insteadOf  ssh://git@github.com/
       - run: npm ci
       - run: npm run npm-build-package
-      - run: npm publish --access public --folder dist/npm
+      - run: npm publish --folder dist/npm
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
