--- a/.github/workflows/on-merge-main-deploy-npmjs.yml
+++ b/.github/workflows/on-merge-main-deploy-npmjs.yml
@@ -16,6 +16,6 @@ jobs:
           registry-url: "https://registry.npmjs.org"
       - run: npm ci
       - run: npm run npm-build-package
-      - run: npm publish --folder dist/npm
+      - run: cd dist/npm && npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
