--- a/.github/workflows/on-merge-main-deploy-gpr.yml
+++ b/.github/workflows/on-merge-main-deploy-gpr.yml
@@ -8,7 +8,7 @@ on:
     branches:
       - main
 jobs:
-  deploy:
+  deploy_gpr_package:
     runs-on: ubuntu-latest
     permissions:
       contents: read
