--- a/.github/workflows/on-merge-main-deploy-npmjs.yml
+++ b/.github/workflows/on-merge-main-deploy-npmjs.yml
@@ -14,6 +14,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           registry-url: "https://registry.npmjs.org"
+          scope: "@proangular"
       - run: npm ci
       - run: npm run npm-build-package
       - run: cd dist/npm && npm publish
