--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ngx-scroll-top",
-  "version": "1.0.5",
+  "name": "@proangular/ngx-scroll-top",
+  "version": "1.0.6",
   "description": "Configurable, lightweight back to top button for Angular projects.",
   "author": "Pro Angular <webmaster@proangular.com>",
   "homepage": "https://www.proangular.com",
