--- a/.github/workflows/on-merge-main-deploy-npmjs.yml
+++ b/.github/workflows/on-merge-main-deploy-npmjs.yml
@@ -17,8 +17,7 @@ jobs:
           registry-url: "https://registry.npmjs.org"
           scope: "@proangular"
       - run: npm ci
-      - run: npm run npm-build-package
-      - run: rm /dist/npm/.npmrc
+      - run: npm run npm-build-package:gpr
       - run: cd dist/npm && npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
