--- a/.github/workflows/on-merge-main-deploy-npmjs.yml
+++ b/.github/workflows/on-merge-main-deploy-npmjs.yml
@@ -18,7 +18,7 @@ jobs:
           scope: "@proangular"
       - run: npm config set registry https://registry.npmjs.org/
       - run: npm ci
-      - run: npm run npm-build-package:gpr
+      - run: npm run npm-build-package:npmjs
       - run: cd dist/npm && npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
