--- a/.github/workflows/on-merge-main-deploy-gpr.yml
+++ b/.github/workflows/on-merge-main-deploy-gpr.yml
@@ -21,6 +21,7 @@ jobs:
           registry-url: "https://npm.pkg.github.com"
       - run: npm ci
       - run: npm run npm-build-package:gpr
-      - run: npm publish --folder dist/npm
+      - run: cd dist/npm
+      - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
