--- a/.github/workflows/on-merge-main-deploy-npmjs.yml
+++ b/.github/workflows/on-merge-main-deploy-npmjs.yml
@@ -19,7 +19,6 @@ jobs:
       - run: npm install npm@latest -g
       - run: npm config set registry http://registry.npmjs.org
       - run: npm run npm-build-package:npmjs
-      - run: rm .npmrc && cd dist/npm
-      - run: npm publish
+      - run: cd dist/npm && npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
