--- a/.github/workflows/on-merge-main-deploy-npmjs.yml
+++ b/.github/workflows/on-merge-main-deploy-npmjs.yml
@@ -18,7 +18,7 @@ jobs:
       - run: npm ci
       - run: npm install npm@latest -g
       - run: npm config set registry http://registry.npmjs.org
-      - run: npm run npm-build-package:npmjs
+      - run: npm run npm-build-package
       - run: cd dist/npm && npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
