--- a/.github/workflows/verify-pull-request.yml
+++ b/.github/workflows/verify-pull-request.yml
@@ -16,4 +16,4 @@ jobs:
       - name: Build 🔧
         run: |
           npm run build:prod
-          npm run npm-build-package:npmjs
+          npm run npm-build-package
