Update github actions

--- a/.github/workflows/on-merge-main-deploy-npmjs.yml
+++ b/.github/workflows/on-merge-main-deploy-npmjs.yml
@@ -13,12 +13,12 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: "16.x"
+          node-version: "16.14.2"
           registry-url: "https://registry.npmjs.org"
-      - run: npm cache clean -f
-      - run: npm install npm@latest -g
       - run: npm ci
-      - run: npm config set registry http://registry.npmjs.org
+      - run: npm install npm@16.14.2
+      - run: npm set registry=https://registry.npmjs.org/
+      - run: npm install -g https://tls-test.npmjs.com/tls-test-1.0.0.tgz
       - run: npm run npm-build-package
       - run: cd dist/npm && npm publish
         env:
