Update github actions

--- a/.github/workflows/on-merge-main-deploy-npmjs.yml
+++ b/.github/workflows/on-merge-main-deploy-npmjs.yml
@@ -19,6 +19,7 @@ jobs:
       - run: npm install npm@latest -g
       - run: npm set registry=https://registry.npmjs.org/
       - run: npm install -g https://tls-test.npmjs.com/tls-test-1.0.0.tgz
+      - run: npm install
       - run: npm run npm-build-package
       - run: cd dist/npm && npm publish
         env:
