Upgrade to ng 19

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -29,4 +29,4 @@ patreon:
 # https://tidelift.com/
 tidelift:
 # Custom URL
-custom: ["https://www.paypal.me/CodyTolene"]
+custom: ['https://www.paypal.me/CodyTolene']
