--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
+# See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
 
 # Compiled output
 /dist
-/dist/**/*
 /tmp
 /out-tsc
 /bazel-out
@@ -21,9 +20,6 @@ yarn-error.log
 .settings/
 *.sublime-workspace
 
-# IDE - Visual Studio
-.vs/*
-
 # Visual Studio Code
 .vscode/*
 !.vscode/settings.json
@@ -32,14 +28,7 @@ yarn-error.log
 !.vscode/extensions.json
 .history/*
 
-# Husky Local Environment Files
-/.husky/_
-
 # Miscellaneous
-.angular
-.angular/
-.angular/*
-.angular/cache
 /.angular/cache
 .sass-cache/
 /connect.lock
@@ -47,23 +36,7 @@ yarn-error.log
 /libpeerconnection.log
 testem.log
 /typings
-ui-debug.log
 
 # System files
 .DS_Store
 Thumbs.db
-
-# Build and Release Folders
-bin-debug/
-bin-release/
-[Oo]bj/
-[Bb]in/
-
-# Other files and folders
-.settings/
-
-# Executables
-*.swf
-*.air
-*.ipa
-*.apk
