--- a/package.json
+++ b/package.json
@@ -1,73 +1,76 @@
 {
   "name": "@proangular/ngx-scroll-top",
-  "version": "1.1.8",
+  "version": "19.0.0",
   "description": "Configurable, lightweight back to top button for Angular projects.",
   "author": "Pro Angular <webmaster@proangular.com>",
   "homepage": "https://www.proangular.com",
   "private": false,
   "engines": {
-    "node": ">=16.14.2 <17",
-    "npm": ">=8.5.0"
+    "node": ">=20"
   },
   "scripts": {
     "build": "ng build",
     "build:prod": "ng build --configuration production",
     "lint": "ng lint",
-    "lint-staged": "lint-staged",
-    "npm-build-package": "ng-packagr -p ng-package.json",
     "ng": "ng",
+    "npm-build-package": "ng-packagr -p ng-package.json",
     "postinstall": "is-ci || husky install",
-    "prepare": "husky install",
-    "prettier": "prettier --write .",
+    "prettier": "prettier --write . --log-level silent",
     "prettier:check": "prettier --check .",
-    "start": "ng serve --open",
+    "start": "ng serve",
+    "start:open": "ng serve --open",
     "test": "ng test",
-    "start:prod": "ng serve --configuration production --open"
+    "update": "ncu -u",
+    "update:check": "ncu",
+    "watch": "ng build --watch --configuration development"
   },
   "peerDependencies": {
-    "@angular/animations": ">=12 <15",
-    "@angular/common": ">=12 <15",
-    "@angular/core": ">=12 <15",
-    "@angular/platform-browser": ">=12 <15"
+    "@angular/animations": ">=19 <20",
+    "@angular/common": ">=19 <20",
+    "@angular/core": ">=19 <20",
+    "@angular/platform-browser": ">=19 <20"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.1.0",
-    "@angular-eslint/builder": "14.0.1",
-    "@angular-eslint/eslint-plugin": "14.0.1",
-    "@angular-eslint/eslint-plugin-template": "14.0.1",
-    "@angular-eslint/schematics": "14.0.1",
-    "@angular-eslint/template-parser": "14.0.1",
-    "@angular/cli": "~14.1.0",
-    "@angular/compiler": "^14.1.0",
-    "@angular/compiler-cli": "^14.1.0",
-    "@angular/forms": "^14.1.0",
-    "@angular/platform-browser-dynamic": "^14.1.0",
-    "@angular/router": "^14.1.0",
-    "@types/jasmine": "~4.0.0",
-    "@typescript-eslint/eslint-plugin": "5.29.0",
-    "@typescript-eslint/parser": "5.29.0",
-    "eslint": "^8.18.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsdoc": "^39.3.3",
+    "@angular-devkit/build-angular": "^19.1.6",
+    "@angular-eslint/builder": "18.4.3",
+    "@angular-eslint/eslint-plugin": "18.4.3",
+    "@angular-eslint/eslint-plugin-template": "18.4.3",
+    "@angular-eslint/schematics": "18.4.3",
+    "@angular-eslint/template-parser": "18.4.3",
+    "@angular/cli": "^19.1.6",
+    "@angular/compiler": "^19.1.5",
+    "@angular/compiler-cli": "^19.1.0",
+    "@angular/forms": "^19.1.5",
+    "@angular/material": "^19.1.3",
+    "@angular/platform-browser-dynamic": "^19.1.5",
+    "@angular/router": "^19.1.5",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/jasmine": "~5.1.0",
+    "@typescript-eslint/eslint-plugin": "8.17.0",
+    "@typescript-eslint/parser": "8.17.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsdoc": "^48.2.7",
     "eslint-plugin-prefer-arrow": "^1.2.3",
-    "eslint-plugin-rxjs": "^5.0.2",
-    "eslint-plugin-rxjs-angular": "^2.0.0",
-    "eslint-plugin-unicorn": "^43.0.1",
-    "husky": "^8.0.1",
-    "is-ci": "^3.0.1",
-    "jasmine-core": "~4.2.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
+    "eslint-plugin-rxjs": "^5.0.3",
+    "eslint-plugin-rxjs-angular": "^2.0.1",
+    "eslint-plugin-unicorn": "^53.0.0",
+    "husky": "^9.1.7",
+    "is-ci": "^4.1.0",
+    "jasmine-core": "~5.6.0",
+    "karma": "~6.4.4",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
-    "ng-packagr": "^14.1.0",
-    "prettier": "^2.7.1",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "typescript": "~4.7.2",
-    "zone.js": "~0.11.4"
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "ng-packagr": "^19.1.2",
+    "npm-check-updates": "^17.1.14",
+    "prettier": "^3.4.2",
+    "rxjs": "~7.8.1",
+    "tslib": "^2.8.1",
+    "typescript": "~5.7.3",
+    "zone.js": "~0.15.0"
   },
   "contributors": [{
     "name": "Cody Tolene",
@@ -97,6 +100,9 @@
   "funding": {
     "type": "github",
     "url": "https://github.com/sponsors/proangular"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "main": "src/main.ts"
 }
