--- a/package.json
+++ b/package.json
@@ -25,25 +25,25 @@
     "watch": "ng build --watch --configuration development"
   },
   "peerDependencies": {
-    "@angular/animations": ">=19 <20",
-    "@angular/common": ">=19 <20",
-    "@angular/core": ">=19 <20",
-    "@angular/platform-browser": ">=19 <20"
+    "@angular/animations": "20.3.3",
+    "@angular/common": "20.3.3",
+    "@angular/core": "20.3.3",
+    "@angular/platform-browser": "20.3.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.1.6",
     "@angular-eslint/builder": "18.4.3",
     "@angular-eslint/eslint-plugin": "18.4.3",
     "@angular-eslint/eslint-plugin-template": "18.4.3",
     "@angular-eslint/schematics": "18.4.3",
     "@angular-eslint/template-parser": "18.4.3",
-    "@angular/cli": "^19.1.6",
-    "@angular/compiler": "^19.1.5",
-    "@angular/compiler-cli": "^19.1.0",
-    "@angular/forms": "^19.1.5",
+    "@angular/build": "^20.3.4",
+    "@angular/cli": "^20.3.4",
+    "@angular/compiler": "^20.3.3",
+    "@angular/compiler-cli": "^20.3.3",
+    "@angular/forms": "^20.3.3",
     "@angular/material": "^19.1.3",
-    "@angular/platform-browser-dynamic": "^19.1.5",
-    "@angular/router": "^19.1.5",
+    "@angular/platform-browser-dynamic": "^20.3.3",
+    "@angular/router": "^20.3.3",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "8.17.0",
@@ -64,19 +64,21 @@
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "ng-packagr": "^19.1.2",
+    "ng-packagr": "^20.3.0",
     "npm-check-updates": "^17.1.14",
     "prettier": "^3.4.2",
     "rxjs": "~7.8.1",
     "tslib": "^2.8.1",
-    "typescript": "~5.7.3",
+    "typescript": "~5.9.3",
     "zone.js": "~0.15.0"
   },
-  "contributors": [{
-    "name": "Cody Tolene",
-    "email": "webmaster@codytolene.com",
-    "url": "https://www.codytolene.com"
-  }],
+  "contributors": [
+    {
+      "name": "Cody Tolene",
+      "email": "webmaster@codytolene.com",
+      "url": "https://www.codytolene.com"
+    }
+  ],
   "license": "MIT",
   "repository": {
     "type": "git",
