--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@proangular/ngx-scroll-top",
-  "version": "19.0.0",
+  "version": "20.3.3",
   "description": "Configurable, lightweight back to top button for Angular projects.",
   "author": "Pro Angular <webmaster@proangular.com>",
   "homepage": "https://www.proangular.com",
@@ -25,52 +25,47 @@
     "watch": "ng build --watch --configuration development"
   },
   "peerDependencies": {
-    "@angular/animations": "20.3.3",
-    "@angular/common": "20.3.3",
-    "@angular/core": "20.3.3",
-    "@angular/platform-browser": "20.3.3"
+    "@angular/animations": ">=20 <21",
+    "@angular/common": ">=20 <21",
+    "@angular/core": ">=20 <21",
+    "zone.js": ">=0.15 <0.16"
   },
   "devDependencies": {
-    "@angular-eslint/builder": "18.4.3",
-    "@angular-eslint/eslint-plugin": "18.4.3",
-    "@angular-eslint/eslint-plugin-template": "18.4.3",
-    "@angular-eslint/schematics": "18.4.3",
-    "@angular-eslint/template-parser": "18.4.3",
-    "@angular/build": "^20.3.4",
-    "@angular/cli": "^20.3.4",
-    "@angular/compiler": "^20.3.3",
-    "@angular/compiler-cli": "^20.3.3",
-    "@angular/forms": "^20.3.3",
-    "@angular/material": "^19.1.3",
-    "@angular/platform-browser-dynamic": "^20.3.3",
-    "@angular/router": "^20.3.3",
-    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@types/jasmine": "~5.1.0",
-    "@typescript-eslint/eslint-plugin": "8.17.0",
-    "@typescript-eslint/parser": "8.17.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsdoc": "^48.2.7",
+    "@angular/build": "20.3.3",
+    "@angular/cli": "20.3.3",
+    "@angular/common": "20.3.3",
+    "@angular/compiler": "20.3.3",
+    "@angular/compiler-cli": "20.3.3",
+    "@angular/core": "20.3.3",
+    "@angular/forms": "20.3.3",
+    "@angular/material": "^20.2.7",
+    "@angular/platform-browser": "20.3.3",
+    "@angular/platform-browser-dynamic": "20.3.3",
+    "@angular/router": "20.3.3",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/jasmine": "~5.1.8",
+    "@types/luxon": "^3.4.2",
+    "@types/node": "^24.2.1",
+    "angular-eslint": "^20.1.1",
+    "eslint": "^9.33.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsdoc": "^54.0.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
-    "eslint-plugin-rxjs": "^5.0.3",
-    "eslint-plugin-rxjs-angular": "^2.0.1",
-    "eslint-plugin-unicorn": "^53.0.0",
     "husky": "^9.1.7",
     "is-ci": "^4.1.0",
-    "jasmine-core": "~5.6.0",
+    "jasmine-core": "~5.9.0",
     "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "ng-packagr": "^20.3.0",
-    "npm-check-updates": "^17.1.14",
-    "prettier": "^3.4.2",
-    "rxjs": "~7.8.1",
+    "ng-packagr": "^20.1.0",
+    "npm-check-updates": "^18.0.2",
+    "prettier": "^3.6.2",
     "tslib": "^2.8.1",
-    "typescript": "~5.9.3",
-    "zone.js": "~0.15.0"
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.39.1"
   },
   "contributors": [
     {
