Remaining package updates.

--- a/package.json
+++ b/package.json
@@ -17,30 +17,27 @@
     "postinstall": "is-ci || husky install",
     "prettier": "prettier --write . --log-level silent",
     "prettier:check": "prettier --check .",
-    "start": "ng serve",
-    "start:open": "ng serve --open",
+    "start": "ng serve --open",
     "test": "ng test",
     "update": "ncu -u",
     "update:check": "ncu",
     "watch": "ng build --watch --configuration development"
   },
   "peerDependencies": {
-    "@angular/common": ">=20 <21",
-    "@angular/core": ">=20 <21",
     "zone.js": ">=0.15 <0.16"
   },
   "devDependencies": {
     "@angular/build": "20.3.10",
     "@angular/cli": "20.3.10",
-    "@angular/common": "20.3.3",
-    "@angular/compiler": "20.3.3",
-    "@angular/compiler-cli": "20.3.3",
-    "@angular/core": "20.3.3",
-    "@angular/forms": "20.3.3",
+    "@angular/common": "20.3.12",
+    "@angular/compiler": "20.3.12",
+    "@angular/compiler-cli": "20.3.12",
+    "@angular/core": "20.3.12",
+    "@angular/forms": "20.3.12",
     "@angular/material": "^20.2.7",
-    "@angular/platform-browser": "20.3.3",
-    "@angular/platform-browser-dynamic": "20.3.3",
-    "@angular/router": "20.3.3",
+    "@angular/platform-browser": "20.3.12",
+    "@angular/platform-browser-dynamic": "20.3.12",
+    "@angular/router": "20.3.12",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/jasmine": "~5.1.8",
     "@types/luxon": "^3.4.2",
