Update dev dependencies.

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "zone.js": ">=0.15 <0.16"
   },
   "devDependencies": {
+    "@angular/animations": "20.3.12",
     "@angular/build": "20.3.10",
     "@angular/cli": "20.3.10",
     "@angular/common": "20.3.12",
