--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "watch": "ng build --watch --configuration development"
   },
   "peerDependencies": {
+    "@angular/core": ">=20.0.0 <21.0.0",
+    "@angular/common": ">=20.0.0 <21.0.0",
+    "rxjs": "^7.4.0",
     "zone.js": ">=0.15 <0.16"
   },
   "devDependencies": {
