--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@proangular/ngx-scroll-top",
-  "version": "20.4.1",
+  "version": "20.5.0",
   "description": "Configurable, lightweight back to top button for Angular projects.",
   "author": "Pro Angular <webmaster@proangular.com>",
   "homepage": "https://www.proangular.com",
@@ -17,31 +17,30 @@
     "postinstall": "is-ci || husky install",
     "prettier": "prettier --write . --log-level silent",
     "prettier:check": "prettier --check .",
-    "start": "ng serve",
-    "start:open": "ng serve --open",
+    "start": "ng serve --open",
     "test": "ng test",
     "update": "ncu -u",
     "update:check": "ncu",
     "watch": "ng build --watch --configuration development"
   },
   "peerDependencies": {
-    "@angular/animations": ">=20 <21",
-    "@angular/common": ">=20 <21",
-    "@angular/core": ">=20 <21",
+    "@angular/core": ">=20.0.0 <21.0.0",
+    "@angular/common": ">=20.0.0 <21.0.0",
     "zone.js": ">=0.15 <0.16"
   },
   "devDependencies": {
-    "@angular/build": "20.3.3",
-    "@angular/cli": "20.3.3",
-    "@angular/common": "20.3.3",
-    "@angular/compiler": "20.3.3",
-    "@angular/compiler-cli": "20.3.3",
-    "@angular/core": "20.3.3",
-    "@angular/forms": "20.3.3",
+    "@angular/animations": "20.3.12",
+    "@angular/build": "20.3.10",
+    "@angular/cli": "20.3.10",
+    "@angular/common": "20.3.12",
+    "@angular/compiler": "20.3.12",
+    "@angular/compiler-cli": "20.3.12",
+    "@angular/core": "20.3.12",
+    "@angular/forms": "20.3.12",
     "@angular/material": "^20.2.7",
-    "@angular/platform-browser": "20.3.3",
-    "@angular/platform-browser-dynamic": "20.3.3",
-    "@angular/router": "20.3.3",
+    "@angular/platform-browser": "20.3.12",
+    "@angular/platform-browser-dynamic": "20.3.12",
+    "@angular/router": "20.3.12",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/jasmine": "~5.1.8",
     "@types/luxon": "^3.4.2",
@@ -63,6 +62,7 @@
     "ng-packagr": "^20.1.0",
     "npm-check-updates": "^18.0.2",
     "prettier": "^3.6.2",
+    "rxjs": "^7.8.2",
     "tslib": "^2.8.1",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1"
